# rag-hybrid-search

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  metrics.py
app/api/: routes.py
app/core/: agentic_rag.py  pageindex_rag.py  rag.py
app/models/: schemas.py
app/prompts/: __init__.py  devops_prompts.py
app/utils/: benchmarking.py  error_tracking.py
benchmarks/: caching_20260325_140627.json  caching_20260325_140827.json  cilium_ingestion_sequential_20260322_134245.json  cilium_ingestion_sequential_20260323_194102.json  comprehensive_20260323_202819.json  comprehensive_20260323_223016.json  ingestion_async_20260323_193344.json  k8s_ingestion_parallel_20260322_120537.json  k8s_ingestion_parallel_20260322_123240.json  k8s_ingestion_parallel_20260323_215357.json  k8s_ingestion_sequential_20260322_114853.json  k8s_ingestion_sequential_20260322_115801.json  k8s_ingestion_sequential_20260322_124217.json  k8s_ingestion_sequential_20260322_131230.json  k8s_ingestion_sequential_20260322_225206.json  pageindex_vs_hybrid.py  phase3_results_20260323_200217.json  phase3_results_20260323_200526.json
docs/: API.md  BENCHMARK_GUIDE.md  CHUNKING_OPTIMIZATION_GUIDE.md  CONFIGURATION.md  DATA_INGESTION.md  INDEX.md  QUICKSTART.md  README.md  RERANKING_AB_TESTING_GUIDE.md  TROUBLESHOOTING.md
docs/archive/: ARCHITECTURE_IMPROVEMENTS.md  COMPLETE_SUMMARY.md  DEPLOYMENT_JOURNEY.md  DOCUMENTATION_INDEX.md  FINAL_TEST_SUMMARY.md  FIXES_SUMMARY.md  MERGE_SUMMARY.md  OPERATIONS_GUIDE.md  OPTIMIZATION_SUMMARY.md  PHASE3_OPTIMIZATIONS.md  README_ENHANCEMENTS.md  TECHNICAL_ARCHITECTURE.md
examples/: README.md  enhanced_fusion_demo.py  example_test.py
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  hpa.yaml  namespace.yaml  pvc.yaml
k8s/monitoring/: grafana.yaml  loki.yaml  prometheus-configmap.yaml  prometheus.yaml  promtail.yaml
scripts/: README.md  benchmark_all.py  benchmark_caching.py  benchmark_chunking.py  benchmark_reranking.py  ingest_docs.py
tests/: conftest.py  test_api.py  test_core_modules.py  test_integration.py
(+34 files in other folders)
