[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-hybrid-search"
version = "0.1.0"
description = "RAG system with hybrid search capabilities"
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py39"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (ok in tests)
    "T201",  # print found (ok for debugging/logging)
    "B008",  # function call in argument defaults (FastAPI pattern)
    "B904",  # raise from inside except (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
"tests/*" = ["S101"]       # Allow assert in tests
"scripts/*" = ["S113", "T201"]  # Allow requests without timeout and prints in scripts
"examples/*" = ["S113", "T201"]  # Allow requests without timeout and prints in examples
"app/main.py" = ["S104"]  # Allow binding to all interfaces in main

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "examples"
]
skips = [
    "B101",  # assert_used - ok in tests
]

[tool.bandit.assert_used]
skips = ['*_test.py', 'test_*.py']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
